VM 8.1.1

  IMPROVEMENTS:

  * vm-delete-duplicate-messages now works by comparing message ID's.
    (from Noah Friedman's vm-addons).


VM 8.1.0

  VM is currently being maintained by a 'VM development team'
  consisting of Robert Widhopf-Fenk, Ulrich Mueller and Uday S Reddy.
  We continue to look for more volunteers to help with the
  maintenance.

  The version 8.1 released here has been under development for more
  than 2 years.  It was held back by Robert Fenk getting busy towards
  the end of 2008 and a long period of interregnum.  Hopefully, we
  have that behind us.  This version has major improvements on various
  fronts, especially for imap-folders.  Please read the details
  below. 

  Bug reports should be sent by using M-x vm-submit-bug-report.  Enjoy
  using VM! - Rob, Ulrich and Uday
  

  IMPROVEMENTS:

    * The variable vm-mime-require-mime-version-header is set to nil
      by default, so that we will be tolerant of bad MIME senders.

    * Allow for sorting the headers of composition buffers by calling the
      function `vm-reorder-message-headers' interactively.  You may configure
      the order by the new variable `vm-mail-header-order'.  This can be
      useful if some broken MUAs (e.g. Tobit) mess up the messages due to the
      header order.

    * Added hiding and protection of headers in composition buffers.  See the
      new variable `vm-mail-mode-hidden-headers' for customization. (Thanks to
      Eric Schulte for the initial code posted in gnu.emacs.vm.info)

    * Added the function `vm-mime-list-part-structure' to list the mime part
      structure of a message.

    * Added function `vm-mime-nuke-alternative-text/html' which can be used to
      get rid of alternative text/html parts.

    * VMPC: Better action reader and a default profile which is used if no
      email addresses could be found.  The meaning of the arguments for
      `vmpc-prompt-for-profile' has been slightly simplified, see the doc